Prevent scroll issues on mobile when footer img doesn't load.

--- a/css/main.scss
+++ b/css/main.scss
@@ -148,3 +148,7 @@ img.icon {
     width: 30px;
     height: 30px;
 }
+
+footer img {
+    max-width: 200px;
+}
